--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -6,3 +6,25 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; 
+}
+
+body {
+    color: #777;
+    font-family: "Lato", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.7;
+}
+
+.header {
+    background-image: linear-gradient(to right, #80d671cc, #27b485cc), url(../img/hero.jpg);
+    background-position: top; /* the top of the image always stays on top of the container. the bottom will get cropped but the top wonr */
+    background-size: cover; /* fit the image to the size fo the width */
+    height: 95vh;
+
+}
