--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -22,11 +22,39 @@ body {
     padding: 30px;
 }
 
+.d-block {
+    display: block;
+}
+
 .header {
     background-image: linear-gradient(to right, #80d671cc, #27b485cc), url(../img/hero.jpg);
     background-position: top; /* the top of the image always stays on top of the container. the bottom will get cropped but the top wonr */
     background-size: cover; /* fit the image to the size fo the width */
-    height: 95vh;
-
     clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100% ); /*x y*/
+    height: 95vh;
+    position: relative;
+
+}
+
+.heading-primary {
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.heading-primary-main {
+    
+}
+
+.heading-primary-sub {
+
+}
+
+.logo {
+    height: 35px;
+}
+
+.logo-box {
+    position: absolute;
+    top: 40px;
+    left: 40px;
 }
