--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -42,11 +42,15 @@ body {
 }
 
 .heading-primary-main {
-    
+    font-size: 60px;
+    font-weight: 700;
+    letter-spacing: 35px;
 }
 
 .heading-primary-sub {
-
+    font-size: 20px;
+    font-weight: 400;
+    letter-spacing: 17.4px;
 }
 
 .logo {
@@ -57,4 +61,11 @@ body {
     position: absolute;
     top: 40px;
     left: 40px;
+}
+
+.text-box {
+    left: 50%;
+    position: absolute;
+    top: 40%;
+    transform: translate(-50%, -50%);
 }
