--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -8,64 +8,106 @@ Dark green: #28b485
 */
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box; 
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    color: #777;
-    font-family: "Lato", sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.7;
-    padding: 30px;
+  color: #777;
+  font-family: "Lato", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.7;
+  padding: 30px;
 }
 
 .d-block {
-    display: block;
+  display: block;
 }
 
 .header {
-    background-image: linear-gradient(to right, #80d671cc, #27b485cc), url(../img/hero.jpg);
-    background-position: top; /* the top of the image always stays on top of the container. the bottom will get cropped but the top wonr */
-    background-size: cover; /* fit the image to the size fo the width */
-    clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100% ); /*x y*/
-    height: 95vh;
-    position: relative;
-
+  background-image: linear-gradient(to right, #80d671cc, #27b485cc),
+    url(../img/hero.jpg);
+  background-position: top; /* the top of the image always stays on top of the container. the bottom will get cropped but the top wonr */
+  background-size: cover; /* fit the image to the size fo the width */
+  clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%); /*x y*/
+  height: 95vh;
+  position: relative;
 }
 
 .heading-primary {
-    color: #fff;
-    text-transform: uppercase;
+  color: #fff;
+  text-transform: uppercase;
+
+  backface-visibility: hidden; /* hack to fix some quirky animation see min 12 on course but it somehow fixes the shaking*/
 }
 
 .heading-primary-main {
-    font-size: 60px;
-    font-weight: 700;
-    letter-spacing: 35px;
+  font-size: 60px;
+  font-weight: 700;
+  letter-spacing: 35px;
+
+  animation-name: moveInLeft;
+  animation-duration: 1s;
+  animation-delay: 3s;
+  animation-iteration-count: 3;
+  animation-timing-function: ease-out; /* slower at the end */
 }
 
 .heading-primary-sub {
-    font-size: 20px;
-    font-weight: 400;
-    letter-spacing: 17.4px;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 17.4px;
+
+  animation: moveInRight 1s ease-in; /* slower at the beginning */
 }
 
 .logo {
-    height: 35px;
+  height: 35px;
 }
 
 .logo-box {
-    position: absolute;
-    top: 40px;
-    left: 40px;
+  position: absolute;
+  top: 40px;
+  left: 40px;
 }
 
 .text-box {
-    left: 50%;
-    position: absolute;
-    top: 40%;
-    transform: translate(-50%, -50%);
+  left: 50%;
+  position: absolute;
+  top: 40%;
+  transform: translate(-50%, -50%);
 }
+
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+
+  80% {
+    transform: translateX(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+
+  80% {
+    transform: translateX(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+/* /// browsers are optimized with anumating opacity and transform */
