--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -22,6 +22,19 @@ body {
   padding: 30px;
 }
 
+.btn:link,
+.btn:visited {
+  display: inline-block;
+
+  padding: 15px 40px;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.btn-white {
+  background-color: #fff;
+}
+
 .d-block {
   display: block;
 }
@@ -76,6 +89,7 @@ body {
 .text-box {
   left: 50%;
   position: absolute;
+  text-align: center;
   top: 40%;
   transform: translate(-50%, -50%);
 }
