--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -26,9 +26,11 @@ body {
 .btn:visited {
   display: inline-block;
 
+  border-radius: 100px;
   padding: 15px 40px;
   text-transform: uppercase;
   text-decoration: none;
+  transition: all 0.2s;
 }
 
 .btn:hover {
