creating an illusion of button movement

--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -34,10 +34,12 @@ body {
 }
 
 .btn:hover {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
   transform: translateY(-3px); /* negative takes it up*/
 }
 
 .btn:active {
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   transform: translateY(-1px);
 }
 
