--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -44,6 +44,11 @@ body {
   transform: translateY(-1px);
 }
 
+.btn-animated {
+  animation: moveInBottom 0.5s ease-out 0.75s;
+  animation-fill-mode: backwards; /* button starts off visible making a wonky animation. sow e add the animation fil mode to start it at the last animation eg at 100% and not 0% */
+}
+
 .btn-white {
   background-color: #fff;
   color: #777;
@@ -163,4 +168,15 @@ body {
   }
 }
 
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
 /* /// browsers are optimized with anumating opacity and transform */
