--- a/gym/animationStyle.css
+++ b/gym/animationStyle.css
@@ -22,24 +22,48 @@ body {
 }
 
 .animation-fill-mode-none {
-  animation: moveBoxForward 5s ease-in;
+  animation: moveBoxForward 5s ease-in 2s;
+  animation-fill-mode: none;
 }
 
 .animation-fill-mode-forwards {
-  animation: moveBoxForward 5s ease-in;
+  animation: moveBoxForward 5s ease-in 2s;
   animation-fill-mode: forwards;
 }
 .animation-fill-mode-backwards {
-  animation: moveBoxForward 5s ease-in;
+  animation: moveBoxForward 5s ease-in 2s;
+  animation-fill-mode: backwards;
+}
+
+.animation-fill-bottom-btn {
+  animation: moveInBottom 1s ease-in 2s;
+  animation-fill-mode: none;
+}
+.animation-fill-bottom-btn-backwards {
+  animation: moveInBottom 1s ease-in 2s;
   animation-fill-mode: backwards;
 }
 
 @keyframes moveBoxForward {
   0% {
+    opacity: 0;
     left: 0%;
   }
 
   100% {
+    opacity: 1;
     left: 80%;
+  }
+}
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
   }
 }
