--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -13,21 +13,26 @@ Dark green: #28b485
   box-sizing: border-box;
 }
 
+html {
+  /* root font size is set in thehtml selector */
+  font-size: 10px;
+}
+
 body {
   color: #777;
   font-family: "Lato", sans-serif;
-  font-size: 16px;
+  /* font-size: 16px; */
   font-weight: 400;
   line-height: 1.7;
-  padding: 30px;
+  padding: 3rem;
 }
 
 .btn:link,
 .btn:visited {
   display: inline-block;
 
-  border-radius: 100px;
-  padding: 15px 40px;
+  border-radius: 10rem;
+  padding: 1.5rem 4rem;
   text-transform: uppercase;
   text-decoration: none;
   transition: all 0.2s;
@@ -35,13 +40,13 @@ body {
 }
 
 .btn:hover {
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-  transform: translateY(-3px); /* negative takes it up*/
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+  transform: translateY(-0.3rem); /* negative takes it up*/
 }
 
 .btn:active {
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-  transform: translateY(-1px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+  transform: translateY(-0.1rem);
 }
 
 .btn-animated {
@@ -57,7 +62,7 @@ body {
 .btn::after {
   display: inline-block; /* the after is treated like a child of the element */
 
-  border-radius: 100px;
+  border-radius: 10rem;
   content: "";
   height: 100%;
   width: 100%;
@@ -97,13 +102,13 @@ body {
   text-transform: uppercase;
 
   backface-visibility: hidden; /* hack to fix some quirky animation see min 12 on course but it somehow fixes the shaking*/
-  margin-bottom: 60px;
+  margin-bottom: 6rem;
 }
 
 .heading-primary-main {
-  font-size: 60px;
+  font-size: 6rem;
   font-weight: 700;
-  letter-spacing: 35px;
+  letter-spacing: 3.5rem;
 
   animation-name: moveInLeft;
   animation-duration: 1s;
@@ -113,21 +118,21 @@ body {
 }
 
 .heading-primary-sub {
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 400;
-  letter-spacing: 17.4px;
+  letter-spacing: 1.75rem;
 
   animation: moveInRight 1s ease-in; /* slower at the beginning */
 }
 
 .logo {
-  height: 35px;
+  height: 3.5rem;
 }
 
 .logo-box {
   position: absolute;
-  top: 40px;
-  left: 40px;
+  top: 4rem;
+  left: 4rem;
 }
 
 .text-box {
@@ -141,11 +146,11 @@ body {
 @keyframes moveInLeft {
   0% {
     opacity: 0;
-    transform: translateX(-100px);
+    transform: translateX(-10rem);
   }
 
   80% {
-    transform: translateX(20px);
+    transform: translateX(2rem);
   }
   100% {
     opacity: 1;
@@ -156,11 +161,11 @@ body {
 @keyframes moveInRight {
   0% {
     opacity: 0;
-    transform: translateX(100px);
+    transform: translateX(10rem);
   }
 
   80% {
-    transform: translateX(-20px);
+    transform: translateX(-2rem);
   }
   100% {
     opacity: 1;
@@ -171,7 +176,7 @@ body {
 @keyframes moveInBottom {
   0% {
     opacity: 0;
-    transform: translateY(30px);
+    transform: translateY(3rem);
   }
 
   100% {
