--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -10,7 +10,7 @@ Dark green: #28b485
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: inherit;
 }
 
 html {
@@ -28,6 +28,7 @@ body {
   font-weight: 400;
   line-height: 1.7;
   padding: 3rem;
+  box-sizing: border-box;
 }
 
 .btn:link,
