--- a/natours/css/style.css
+++ b/natours/css/style.css
@@ -56,12 +56,12 @@ body {
   transform: translateY(-0.1rem);
 }
 
-.btn-animated {
+.btn--animated {
   animation: moveInBottom 0.5s ease-out 0.75s;
   animation-fill-mode: backwards; /* button starts off visible making a wonky animation. sow e add the animation fil mode to start it at the last animation eg at 100% and not 0% */
 }
 
-.btn-white {
+.btn--white {
   background-color: #fff;
   color: #777;
 }
@@ -80,7 +80,7 @@ body {
   transition: all 0.4s;
 }
 
-.btn-white::after {
+.btn--white::after {
   background-color: #fff;
 }
 
@@ -104,6 +104,24 @@ body {
   position: relative;
 }
 
+.header__logo-box {
+  position: absolute;
+  top: 4rem;
+  left: 4rem;
+}
+
+.header__logo {
+  height: 3.5rem;
+}
+
+.header__text-box {
+  left: 50%;
+  position: absolute;
+  text-align: center;
+  top: 40%;
+  transform: translate(-50%, -50%);
+}
+
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
@@ -112,7 +130,7 @@ body {
   margin-bottom: 6rem;
 }
 
-.heading-primary-main {
+.heading-primary--main {
   font-size: 6rem;
   font-weight: 700;
   letter-spacing: 3.5rem;
@@ -124,30 +142,12 @@ body {
   animation-timing-function: ease-out; /* slower at the end */
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
   font-size: 2rem;
   font-weight: 400;
   letter-spacing: 1.75rem;
 
   animation: moveInRight 1s ease-in; /* slower at the beginning */
-}
-
-.logo {
-  height: 3.5rem;
-}
-
-.logo-box {
-  position: absolute;
-  top: 4rem;
-  left: 4rem;
-}
-
-.text-box {
-  left: 50%;
-  position: absolute;
-  text-align: center;
-  top: 40%;
-  transform: translate(-50%, -50%);
 }
 
 @keyframes moveInLeft {
